// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckList Reducer should return null 1`] = `null`;

exports[`CheckList Reducer should save object "2" in "activityLogs" under timestamp "timestamp-2" 1`] = `
Object {
  "timestamp-1": Object {
    "2": Object {
      "completed": false,
    },
    "3": Object {
      "completed": false,
    },
  },
  "timestamp-2": Object {
    "2": Object {
      "completed": false,
    },
  },
}
`;

exports[`CheckList Reducer should save objects "2" and "3" in "activityLogs" under "timestamp-1" 1`] = `
Object {
  "timestamp-1": Object {
    "2": Object {
      "completed": false,
    },
    "3": Object {
      "completed": false,
    },
  },
}
`;

exports[`CheckList Reducer should set completed for all elements in "activityLogs" under "timestamp-3" to "false" 1`] = `
Object {
  "activityLogs": null,
  "timestamp-1": Object {
    "2": Object {
      "completed": false,
    },
    "3": Object {
      "completed": false,
    },
  },
  "timestamp-2": Object {
    "2": Object {
      "completed": false,
    },
  },
}
`;
